--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
 
         <!--Scripts go here-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src='/script/menu.js'></script>
+        <script src='scripts/menu.js'></script>
     </body>
 </html>
