--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <p>
                         Sau khi tốt nghiệp bác sĩ, bà làm ở bệnh viện tâm thần nơi có những đứa trẻ tâm thần, những đứa trẻ bình thường là con bệnh nhân tâm thần. Những trẻ này bị đối xử bất bình đẳng, ở trong môi trường hỗn loạn làm gia tăng xu hướng rối loạn hành vi. Bà cho rằng ĐÂY LÀ VẤN ĐỀ CỦA GIÁO DỤC, KHÔNG PHẢI VẤN ĐỀ CỦA Y HỌC.
                     </p>
-                    <figure><img src='images/whatIsIt/demo1.jpg'></figure>
+                    <figure><img src='images/whatIsIt/demo1.png'></figure>
                     <p>
                         Bà phát triển phương pháp giáo dục của mình và giúp những đứa trẻ trở nên bình thường, có thể viết và làm toán như trẻ bình thường.
                     </p>
@@ -76,14 +76,14 @@
 
             <!--Montessori dạy gì-->
             <section>
-                <div class='container'>
+                <div class='container teachWhat'>
                     <h2>Montessori dạy gì?</h2>
                     <div>
                         Bằng các giáo cụ thiết kế đặc biệt do Maria Montessori sáng tạo và kế thừa từ nghiên cứu của Seguin và Itard. Trẻ tự do lựa chọn giáo cụ phù hợp khả năng, sở thích, làm việc bao lâu tùy ý. Các mức độ phức tạp của giáo cụ theo từng giai đoạn phát triển và thời kì nhạy cảm của trẻ.
                     </div>
                     <div>
                         <h3>Các nhóm chính của Montessori</h3>
-                        <figure><img src='images/whatIsIt/4Main.png'></figure>
+                        <figure><img class='mainType'src='images/whatIsIt/4Main.png'></figure>
                     </div>
                     <div class='material'>
                         <h3>Đồ chơi khoa học của Montessori </h3>
@@ -119,6 +119,10 @@
 
         <!--Page footer goes here-->
         <footer>
+            <div class='contact'>
+                <div class='address'></div>
+                <div class='map'></div>
+            </div>
             <ul>
                 <li>Copyright@2019</li>
                 <li>webdeveloper@thaotruong.uk</li>
