--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                        </ul>
                    </div>
             </nav>
-            <div class='sideBar'>
+            <!-- <div class='sideBar'>
                 <ul>
                     
                     <li><i class="fas fa-search"></i></li>
                     <li><i class="fas fa-map-marker-alt"></i></li>
                    <li id='logo'><img src='images/logo.jpg'></li>
                 </ul>
-            </div>
+            </div> -->
             <div class='banner'>
                 <figure>
                     <img src='images/header-banner.png'>
