--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                            <li>Chương trình học</li>
                            <li>Thực đơn</li>
                            <li>Sự kiện</li>
+                           <li>Thư viện hình</li>
                            <li>Tuyển Dụng</li>
                            <li>Liên Hệ</li>
    
@@ -42,6 +43,7 @@
                            <li>Chương trình học</li>
                            <li>Thực đơn</li>
                            <li>Sự kiện</li>
+                           <li>Thư viện hình</li>
                            <li>Tuyển Dụng</li>
                            <li>Liên Hệ</li>
                            <li></li>
@@ -57,9 +59,12 @@
                    <li id='logo'><img src='images/logo.jpg'></li>
                 </ul>
             </div> -->
-            <div class='banner'>
+            <div class='slider'>
                 <figure>
-                    <img src='images/header-banner.png'>
+                    <img class='slides' src='images/slideshow/beautifulLanscape.jpg'>
+                    <img class='slides'src='images/slideshow/glarus_s.jpg'>
+                    <img class='slides'src='images/slideshow/lighthouse.jpg'>
+                    <img class='slides'src='images/slideshow/nature-wallpapers-8.jpg'>
                 </figure>    
             </div>
             
@@ -88,13 +93,16 @@
                 <div class='map'></div>
             </div> -->
             <ul>
-                <li>Copyright@2019</li>
-                <li>webdeveloper@thaotruong.uk</li>
+                <li><i class="fas fa-map-marker-alt"></i>11F/22 Bạch Đằng, phường 2, quận Tân Bình, thành phố Hồ Chí Minh</li>
+                <li><i class="fas fa-phone-volume"></i><a href="tel:0917345802">0917345802</a> & <a href="tel:0983201317">0983201317</a></li>
+                <li><i class="fas fa-envelope-open"></i>kaykonkindergarten@gmail.com</li>
             </ul>
+            <p>This website is developed by webdeveloper@thaotruong.uk</p>
         </footer>
 
         <!--Scripts go here-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src='scripts/menu.js'></script>
+        <script src='scripts/slideShow.js'></script>
     </body>
 </html>
