--- a/index.html
+++ b/index.html
@@ -51,15 +51,12 @@
                        </ul>
                    </div>
             </nav>
-            <!-- <div class='sideBar'>
-                <ul>
-                    
-                    <li><i class="fas fa-search"></i></li>
-                    <li><i class="fas fa-map-marker-alt"></i></li>
-                   <li id='logo'><img src='images/logo.jpg'></li>
-                </ul>
-            </div> -->
-            <div class='slider'>
+            <a href="https://goo.gl/maps/hpRu1yQ2do72" target="blank">
+                <div class='location' >
+                    <i class="fas fa-map-marker-alt"></i>
+                </div>
+            </a>
+            <div class='slider'>                
                 <figure>
                     <img class='slides' src='images/slideshow/beautifulLanscape.jpg'>
                     <img class='slides'src='images/slideshow/glarus_s.jpg'>
@@ -93,7 +90,12 @@
                 <div class='map'></div>
             </div> -->
             <ul>
-                <li><i class="fas fa-map-marker-alt"></i>11F/22 Bạch Đằng, phường 2, quận Tân Bình, thành phố Hồ Chí Minh</li>
+                <li>
+                    <a href="https://goo.gl/maps/hpRu1yQ2do72" target="blank">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </a>
+                    11F/22 Bạch Đằng, phường 2, quận Tân Bình, thành phố Hồ Chí Minh
+                </li>
                 <li><i class="fas fa-phone-volume"></i><a href="tel:0917345802">0917345802</a> & <a href="tel:0983201317">0983201317</a></li>
                 <li><i class="fas fa-envelope-open"></i>kaykonkindergarten@gmail.com</li>
             </ul>
