--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <!--Page content goes here-->
         <main class='gioiThieu'>
             <h1>Giới Thiệu</h1>
-            <section>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis odio vero, recusandae mollitia commodi possimus reprehenderit fuga impedit sunt similique! Laboriosam at eos vitae tempora laborum nisi expedita voluptas architecto!</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis odio vero, recusandae mollitia commodi possimus reprehenderit fuga impedit sunt similique! Laboriosam at eos vitae tempora laborum nisi expedita voluptas architecto!</div>
+            <section class='content'>
+                <div>Thảo thấy font chữ này khá đẹp và hợp với chủ đề trẻ em, có điều Thảo hơi đắn đo có nên dùng font này cho toàn bộ trang web không. Một là vì nó có khó đọc không? Hai là vì cái logo và cái hình ở footer, font chữ trên hình khác với font chữ này. Thảo sợ mất đẹp vì mất tình đồng bộ. Chị Hiếu và Anh nghĩ sao?</div>
+                <div>Khoan hãy bận tâm về khoảng cách giữa các social media logo và footer, khi nào có nội dung hoàn chỉnh thì Thảo sẽ chỉnh lại cho cân đối và đẹp mắt</div>
             </section>
             <section class='follows'>
                 <figure>
