--- a/lienHe.html
+++ b/lienHe.html
@@ -54,9 +54,9 @@
                 </div>
             </a>
             <div class='slider'>                
-                <!-- <figure>
-                    <img src='images/slideshow/beautifulLanscape.jpg'>                    
-                </figure>     -->
+                <figure>
+                    <img src='images/happyChildren.png'>                    
+                </figure>    
             </div>
             
             <!--page navigation goes here-->
