--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!--TELL PHONES NOT TO LIE ABOUT THEIR WIDTH-->
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
         <!--EMBED GOOGLE FONT-->
-        <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700&amp;subset=vietnamese" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&amp;subset=vietnamese" rel="stylesheet">
          <!--EMBED FONT AWESOME-->
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
 
@@ -48,7 +48,7 @@
                        </ul>
                    </div>
             </nav>
-            <a href="https://goo.gl/maps/hpRu1yQ2do72" target="blank">
+            <a href="https://goo.gl/maps/EvpJXC72s7G2" target="blank">
                 <div class='location' >
                     <i class="fas fa-map-marker-alt"></i>
                 </div>
@@ -73,8 +73,7 @@
         <main class='gioiThieu'>
             <h1>Giới Thiệu</h1>
             <section class='content'>
-                <div>Thảo thấy font chữ này khá đẹp và hợp với chủ đề trẻ em, có điều Thảo hơi đắn đo có nên dùng font này cho toàn bộ trang web không. Một là vì nó có khó đọc không? Hai là vì cái logo và cái hình ở footer, font chữ trên hình khác với font chữ này. Thảo sợ mất đẹp vì mất tình đồng bộ. Chị Hiếu và Anh nghĩ sao?</div>
-                <div>Khoan hãy bận tâm về khoảng cách giữa các social media logo và footer, khi nào có nội dung hoàn chỉnh thì Thảo sẽ chỉnh lại cho cân đối và đẹp mắt</div>
+               
             </section>
             <section class='follows'>
                 <figure>
@@ -101,10 +100,9 @@
             </div> -->
             <ul>
                 <li>
-                    <a href="https://goo.gl/maps/hpRu1yQ2do72" target="blank">
+                    <a href="https://goo.gl/maps/EvpJXC72s7G2" target="blank">
                         <i class="fas fa-map-marker-alt"></i>
-                    </a>
-                    11F/22 Bạch Đằng, P.2, Q.Tân Bình, tpHCM
+                    </a>11F/22 Bạch Đằng, P.2, Q.Tân Bình, tpHCM
                 </li>
                 <li><i class="fas fa-phone-volume"></i><a href="tel:0917345801">0917345801</a> & <a href="tel:0983201317">0983201317</a></li>
                 <li><i class="fas fa-envelope-open"></i>kaykonkindergarten@gmail.com</li>
