--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             </a>
             <div class='slider'>                
                 <figure>
-                    <img class='slides' src='images/slideshow/beautifulLanscape.jpg'>
-                    <img class='slides'src='images/slideshow/glarus_s.jpg'>
-                    <img class='slides'src='images/slideshow/lighthouse.jpg'>
-                    <img class='slides'src='images/slideshow/nature-wallpapers-8.jpg'>
+                    <img class='slides' src='images/slideshow/slide1.jpg'>
+                    <img class='slides'src='images/slideshow/slide2.jpg'>
+                    <img class='slides'src='images/slideshow/slide3.jpg'>
+                    <img class='slides'src='images/slideshow/slide4.jpg'>
                 </figure>    
             </div>
             
@@ -71,10 +71,35 @@
 
         <!--Page content goes here-->
         <main class='gioiThieu'>
-            <h1>Giới Thiệu</h1>
-            <section class='content'>
-               
+            <!--Who suits it?-->
+            <section class='content forWhom'>
+               <div class='wrapper'>
+                   <div>
+                       <h2>Ai sẽ phù hợp với phương pháp Montessori?</h2>
+                        <p>Mỗi trẻ sẽ phù hợp với một cách thức và lộ trình giáo dục khác nhau, Không có một phương pháp nào chung cho mỗi trẻ vì các em là duy nhất và riêng biệt.</p>
+                        <a href="forWhom.html">Đọc thêm...</a>
+                   </div>   
+               </div>
             </section>
+            <section class='content montessori'>
+                <div class='wrapper'>
+                    <div>
+                        <h2>Montessori</h2>
+                        <p>Montessori là gì? Những điều cần biết về Montessori?</p>
+                        <a href="#">Đọc thêm</a>
+                    </div>
+                </div>
+            </section>
+            <section class='content curriculum'>
+                <div class='wrapper'>
+                    <div>
+                        <h2>Chương trình học</h2>
+                        <p>Kế thừa hàng chục năm nghiên cứu của các nhà giáo dục đi trước như Itard và Seguin, các môn học như toán, Ngôn ngữ, Địa lý, Lịch sử, Động thực vật học được nghiên cứu thành các "đồ chơi" giáo cụ khoa học. </p>
+                        <a href="chuongTrinhHoc.html">Đọc thêm</a>
+                    </div>
+                </div>
+            </section>
+            <!--Follow Social Media-->
             <section class='follows'>
                 <figure>
                     <a href='https://www.facebook.com/KayKonMontessori/' title="Facebook" target="blank"><img src='images/follows/fb.png'></a>
