--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
                        </div>
                        <ul class='menuList'>
                            <a href="index.html" class="actived"><li>Giới thiệu</li></a>
+                           <a href="montessori.html"><li>Montessori</li></a>
+                           <a href="forWhom.html" ><li>Đối tượng học</li></a>
                            <a href="chuongTrinhHoc.html"><li>Chương trình học</li></a>
-                           <a href="thucDon.html"><li>Thực đơn</li></a>
-                           <a href="suKien.html"><li>Sự kiện</li></a>
+                           <!-- <a href="thucDon.html"><li>Thực đơn</li></a>
                            <a href="thuVienHinh.html"><li>Thư viện hình</li></a>
                            <a href="tuyenDung.html"><li>Tuyển Dụng</li></a>
-                           <a href="lienHe.html"><li>Liên Hệ</li></a>
+                           <a href="lienHe.html"><li>Liên Hệ</li></a> -->
                        </ul>
                    </div>
    
@@ -39,12 +40,13 @@
                    <div class='navbar bigScreen'>  
                        <ul>                    
                             <a href="index.html" class='actived'><li>Giới thiệu</li></a>
-                            <a href="chuongTrinhHoc.html"><li>Chương trình học</li></a>
-                            <a href="thucDon.html"><li>Thực đơn</li></a>
-                            <a href="suKien.html"><li>Sự kiện</li></a>
+                            <a href="montessori.html"><li>Montessori</li></a>
+                            <a href="forWhom.html" ><li>Đối tượng học</li></a>
+                            <a href="chuongTrinhHoc.html"><li>Chương trình học</li></a>  
+                            <!-- <a href="thucDon.html"><li>Thực đơn</li></a>  
                             <a href="thuVienHinh.html"><li>Thư viện hình</li></a>
                             <a href="tuyenDung.html"><li>Tuyển Dụng</li></a>
-                            <a href="lienHe.html"><li>Liên Hệ</li></a>
+                            <a href="lienHe.html"><li>Liên Hệ</li></a> -->
                        </ul>
                    </div>
             </nav>
@@ -71,6 +73,15 @@
 
         <!--Page content goes here-->
         <main class='gioiThieu'>
+            <section class='content montessori'>
+                <div class='wrapper'>
+                    <div>
+                        <h2>Montessori</h2>
+                        <p>Montessori là gì? Những điều cần biết về Montessori?</p>
+                        <a href="montessori.html">Đọc thêm</a>
+                    </div>
+                </div>
+            </section>
             <!--Who suits it?-->
             <section class='content forWhom'>
                <div class='wrapper'>
@@ -80,15 +91,6 @@
                         <a href="forWhom.html">Đọc thêm...</a>
                    </div>   
                </div>
-            </section>
-            <section class='content montessori'>
-                <div class='wrapper'>
-                    <div>
-                        <h2>Montessori</h2>
-                        <p>Montessori là gì? Những điều cần biết về Montessori?</p>
-                        <a href="#">Đọc thêm</a>
-                    </div>
-                </div>
             </section>
             <section class='content curriculum'>
                 <div class='wrapper'>
