--- a/lienHe.html
+++ b/lienHe.html
@@ -25,13 +25,14 @@
                             <i class="fas fa-bars"></i>
                        </div>
                        <ul class='menuList'>
-                           <a href="index.html"><li>Giới thiệu</li></a>
-                           <a href="chuongTrinhHoc.html"><li>Chương trình học</li></a>
-                           <a href="thucDon.html"><li>Thực đơn</li></a>
-                           <a href="suKien.html"><li>Sự kiện</li></a>
-                           <a href="thuVienHinh.html"><li>Thư viện hình</li></a>
-                           <a href="tuyenDung.html"><li>Tuyển Dụng</li></a>
-                           <a href="lienHe.html" class='actived'><li>Liên Hệ</li></a>
+                            <a href="index.html"><li>Giới thiệu</li></a>
+                            <a href="montessori.html"><li>Montessori</li></a>
+                            <a href="forWhom.html" ><li>Đối tượng học</li></a>
+                            <a href="chuongTrinhHoc.html"><li>Chương trình học</li></a>  
+                            <!-- <a href="thucDon.html"><li>Thực đơn</li></a>  
+                            <a href="thuVienHinh.html"><li>Thư viện hình</li></a>
+                            <a href="tuyenDung.html"><li>Tuyển Dụng</li></a>
+                           <a href="lienHe.html" class='actived'><li>Liên Hệ</li></a>-->
                        </ul>
                    </div>
    
