--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
        
 
         <!--Page content goes here-->
-        <main class='gioiThieu'>
+        <main>
+        <section class='gioiThieu'>
             <section class='content montessori'>
                 <div class='wrapper'>
                     <div>
@@ -101,6 +102,7 @@
                     </div>
                 </div>
             </section>
+        </section>
             <!--Follow Social Media-->
             <section class='follows'>
                 <figure>
