--- a/index.html
+++ b/index.html
@@ -106,11 +106,9 @@
             <!--Follow Social Media-->
             <section class='follows'>
                 <figure>
-                    <a href='https://www.facebook.com/KayKonMontessori/' title="Facebook" target="blank"><img src='images/follows/fb.png'></a>
+                    <a href='https://www.facebook.com/KayKonMontessori/' title="Facebook" target="blank"><img id='fbIcon'src='images/follows/fb.png'></a>
                     <a href='https://www.instagram.com/kaykonkindergarten/' title="Instagram" target="blank"><img src='images/follows/instagram.png'></a>
-                    <a href='#' title="Zalo"><img src='images/follows/icon-zalo.png'></a>
-                    
-                   
+                    <a href='#' title="Zalo"><img src='images/follows/icon-zalo.png'></a> 
                 </figure>
             </section>
         </main>
