--- a/montessori.html
+++ b/montessori.html
@@ -70,8 +70,26 @@
        
 
         <!--Page content goes here-->
-        <main class='suKien'>
-            <h1>Montessori</h1>
+        <main class='montessori'>
+            <h1>Montessori là gì?</h1>
+            <div>
+                <div class='content'>
+                    <p>Montessori là phương pháp giáo dục của bà Maria Montessori - nữ bác sĩ đầu tiên của Ý, là nhà giáo dục 3 lần được đề cử giải Nobel vì hòa bình.</p>
+                    <figure>
+                        <img src='images/whatIsIt/montessor.png'/>
+                    </figure>
+                    <p>Sau khi tốt nghiệp bác sĩ, bà làm ở bệnh viện tâm thần nơi có những đứa trẻ tâm thần, những đứa trẻ bình thường là con bệnh nhân tâm thần. Những trẻ này bị đối xử bất bình đẳng, ở trong môi trường hỗn loạn làm gia tăng xu hướng rối loạn hành vi. </p>
+                    <figure>
+                        <img src='images/whatIsIt/demo1.png'/>
+                    </figure>
+                    <p>Bà cho rằng <span>"đây là vấn đề của giáo dục, không phải vấn để của y học"</span>. Bà phát triển phương pháp giáo dục của mình và giúp những đứa trẻ trở nên bình thường, có thể viết và làm toán như trẻ bình thường.</p>
+                    <p>06/01/1907 mở "Nhà Trẻ" - Casa dei Bambini đầu tiên cho con của công nhân nghèo ở Rome. Bà cho rằng phương pháp giáo dục của mình giúp trẻ rối loạn tâm thần và hành vi có thể bình thường hóa, thì phương pháp đó áp dụng cho trẻ bình thường sẽ mở ra những tiềm năng bất ngờ của trẻ.</p>
+                    <figure>
+                        <img src='images/whatIsIt/demoMap.png'/>
+                    </figure>
+                    <p>Đến 1911: phương pháp giáo dục Montessori lan rộng toàn nước Ý. Phương pháp Montessori nhanh chóng nổi tiếng và lan rộng tới Mỹ (1911-1912), Tây Ban Nha (1915), Hà Lan (1917), Anh (1919), Ấn Độ (1939), và Pháp, Đức, Thụy Sỹ, Bỉ, Nga, Serbia,Canada, Nhật Bản, Phillipine, Indonesia, Úc và New Zealand</p>
+                </div>
+            </div>
         </main>
 
         <!--Page footer goes here-->
