--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <!--Page content goes here-->
         <main>
         <section class='gioiThieu'>
+            <!--Montessori-->
             <section class='content montessori'>
                 <div class='wrapper'>
                     <div>
@@ -93,6 +94,7 @@
                    </div>   
                </div>
             </section>
+            <!--curriculum-->
             <section class='content curriculum'>
                 <div class='wrapper'>
                     <div>
@@ -103,6 +105,7 @@
                 </div>
             </section>
         </section>
+        
             <!--Follow Social Media-->
             <section class='follows'>
                 <figure>
