--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div>
                         <h2>Montessori</h2>
                         <p>Montessori là gì? Những điều cần biết về Montessori?</p>
-                        <a href="montessori.html">Đọc thêm</a>
+                        <a href="montessori.html">Đọc thêm...</a>
                     </div>
                 </div>
             </section>
