--- a/index.html
+++ b/index.html
@@ -174,5 +174,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="scripts/menu.js"></script>
     <script src="scripts/slideShow.js"></script>
+    <script src="scripts/photoGallery.js"></script>
   </body>
 </html>
